# book_club

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
book_club/: main.py  utils.py
book_club/core/: config.py  crud.py  data_base.py  dependencies.py
book_club/models/: book_model.py
book_club/scraping/: request.py  scraping.py
